# pg_llm

./: .clang-format  .gitignore  API.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.zh.md  INSTALL.md  Makefile  Makefile.test  README.md  README.zh.md  build.sh  format.sh  pg_llm.c  pg_llm.control  setup-clang-format.sh
.githooks/: commit-msg  pre-commit-clang-format
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ARCHITECTURE.zh.md  application_layer.md  core_layer.md  design.md  directory_structure.md  directory_structure.zh.md  glog_integration.md  glog_integration.zh.md  index.md  logging.md  logging.zh.md  model_layer.md  storage_layer.md  text2sql_design.md  text2sql_design.zh.md
include/: chat.h  conversation.h  hybrid_reasoning.h  model_interface.h  pg_llm.h  report_generator.h  security.h  sql_optimizer.h
include/catalog/: pg_llm_models.h
include/models/: chat_session.h  chatgpt_model.h  deepseek_model.h  hunyuan_model.h  llm_interface.h  model_manager.h  qianwen_model.h  session_manager.h
include/text2sql/: pg_vector.h  text2sql.h
include/utils/: pg_llm_glog.h  pg_llm_log.h  pg_llm_support.h
sql/: pg_llm--1.0--1.1.sql  pg_llm--1.0.sql  pg_llm--1.1.sql  report_generator.sql
src/: CMakeLists.txt  chat.c  conversation.c  hybrid_reasoning.c  model_interface.c  pg_llm.cpp  report_generator.c  security.c  sql_optimizer.c
src/catalog/: pg_llm_models.cpp
src/models/: chat_session.cpp  chatgpt.c  common_model.c  deepseek.c  doubao.c  llm_interface.cpp  local_model.c  model_manager.cpp  qianwen.c  wenxin.c
src/models/chatgpt/: chatgpt_model.cpp
src/models/deepseek/: deepseek_model.cpp
src/models/hunyuan/: hunyuan_model.cpp
src/models/qianwen/: qianwen_model.cpp
src/text2sql/: pg_vector.cpp  text2sql.cpp
src/utils/: pg_llm_glog.cpp  pg_llm_support.cpp
test/: Makefile  README.md
test/expected/: test_report_visualization.out
test/sql/: 001_basic.sql  002_models.sql  003_chat.sql  pg_llm_upgrade.sql  test_pg_llm.sql  test_report_visualization.sql
